Service 'Min cost' alignment fix

--- a/src/App.css
+++ b/src/App.css
@@ -136,7 +136,7 @@ padding-bottom: 20px;
 
 .span{
   color:#083644 ;
-  font-size: 17px;
+  font-size: larger;
   padding: 20px 0px 10px 10px;
 }
 
